# dimos

./: .gitignore  AGENTS.md  MUJOCO_LOG.TXT  NEWREADME.MD  README.md  docker-compose.yml  mkdocs.yml  pr_responses.yaml  pyproject.toml  requirements.txt  run.sh  run_docker.sh  uv.lock.REMOVED.git-id
.github/: dependabot.yml
.github/workflows/: _docker-build-template.yml  ci.yml  docker.yml  fast-docs.yml  fast-test.yml  tests.yml
dimos/: __init__.py  test_no_sections.py
dimos/agents/: __init__.py  agent.py  agent_config.py  agent_huggingface_local.py  agent_huggingface_remote.py  agent_test_runner.py  claude_agent.py  test_agent.py
dimos/agents2/: agent.py  spec.py  test_fake_agent.py
dimos/control/: blueprints.py  cartesian_jogger.py  components.py  coordinator.py  hardware_interface.py  orchestrator.py  test_control.py  tick_loop.py
dimos/core/: __init__.py  arduino_module.py  blueprints.py  core.py  daemon.py  docker_module.py  docker_runner.py  global_config.py  module.py  module_coordinator.py  module_dask.py  native_module.py  rpc_client.py  run_registry.py  skill_module.py  stream.py  test_blueprints.py  test_core.py  test_daemon.py  test_global_config.py  test_native_module.py  test_native_rebuild.py  test_stream.py  test_worker.py  testing.py  transport.py  worker.py  worker_manager_docker.py
dimos/dashboard/: README.md  rerun_autolog.py  rerun_dashboard.py  rerun_logger_module.py
dimos/e2e_tests/: conftest.py  test_dimos_cli_e2e.py  test_dimsim.py  test_dimsim_cross_wall.py  test_smart_nav_replay.py  test_spatial_memory.py
dimos/grasping/: README.md  __init__.py  data_paths.py  graspgen_module.py  object_to_grasp_bridge.py  visualize_grasps.py
dimos/spec/: map.py  (+1 more)
docs/: development.md  index.md  quickstart.md  requirements.md
go2_metrics/: go2_velocity_log.csv
installer/: README.md
onnx/: metric3d_vit_small.onnx
plans/: memory3.md
ros_docker_integration/: Dockerfile  README.md  debug.sh  debug_paths.sh  ros_launch_wrapper.py  shell.sh  test_integration.sh
scripts/: run_inference.py
tests/: agent_manip_flow_test.py  run.py  test_agent_ctransformers_gguf.py  test_agent_huggingface_local.py  test_agent_huggingface_remote.py  test_huggingface_llm_agent.py  test_ibvs.py  test_person_following_webcam.py  test_planning_robot_agent.py  test_skills.py  test_so101_pick_and_place.py
(+689 files in other folders)
