[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A dimensional operating system framework for robotics and autonomous agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "dimos contributors" },
]
keywords = ["robotics", "autonomous", "agents", "ros2", "dimensional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "rxpy>=4.0.0",
    "reactivex>=4.0.4",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
ros2 = [
    "rclpy",
]
vision = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
all = [
    "dimos[dev,vision,llm]",
]

[project.scripts]
dimos = "dimos.cli:app"

[project.urls]
Homepage = "https://github.com/dimensionalOS/dimos"
Repository = "https://github.com/dimensionalOS/dimos"
Issues = "https://github.com/dimensionalOS/dimos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=dimos --cov-report=term-missing"

[tool.coverage.run]
source = ["src/dimos"]
omit = ["tests/*"]
